# auto_change_wallpaper

./: CMakeLists.txt  Dockerfile  README.md
include/: acw.hpp  argpaser.hpp  getImage.hpp  image.hpp  label.hpp  main.hpp  site.h
src/: acw.cpp  getImage.cpp  image.cpp  label.cpp  main  main.cpp
